--- a/t/fixtures/reportsdb/report.yml
+++ b/t/fixtures/reportsdb/report.yml
@@ -5,27 +5,34 @@
   data:
     id: 21
     tap: |
-      OK 1 foo
-      OK 2 bar
-      OK 3 affe
-      OK 4 zomtec
+      1..4
+      ok 1 foo
+      ok 2 bar
+      ok 3 affe
+      ok 4 zomtec
 
 - schema: Report
   name: dummy 2
   data:
     id: 22
     tap: |
-      OK 1 berlin
-      OK 2 prag
-      OK 3 warschau
+      1..3
+      ok 1 berlin
+      ok 2 prag
+      ok 3 warschau
 
 - schema: Report
   name: dummy 3
   data:
     id: 23
     tap: |
-      OK 1 affe
-      OK 2 loewe
-      OK 3 fink
-      OK 4 star
+      1..4
+      ok 1 affe
+      ok 2 loewe
+      ok 3 fink
+      ok 4 star
+      1..3
+      ok 1 - foo
+      ok 2 - bar
+      ok 3 - baz
 
