--- a/t/fixtures/reportsdb/report.yml
+++ b/t/fixtures/reportsdb/report.yml
@@ -18,11 +18,12 @@
     id: 21
     suite_id: 7
     suite_version: 1.01
+    successgrade: FAIL
     tap: |
       1..4
       ok 1 foo
       ok 2 bar
-      ok 3 affe
+      not ok 3 affe
       ok 4 zomtec
 
 - schema: Report
@@ -31,6 +32,7 @@
     id: 22
     suite_id: 7
     suite_version: 1.02
+    successgrade: PASS
     tap: |
       1..3
       ok 1 berlin
@@ -43,6 +45,7 @@
     id: 23
     suite_id: 7
     suite_version: 1.03
+    successgrade: PASS
     tap: |
       1..4
       ok 1 affe
@@ -53,4 +56,3 @@
       ok 1 - foo
       ok 2 - bar
       ok 3 - baz
-
