--- a/t/fixtures/reportsdb/report.yml
+++ b/t/fixtures/reportsdb/report.yml
@@ -5,12 +5,68 @@
 - schema: Suite
   name: perfmon suite
   data:
+    id: 4
+    name: Topic-Xen
+    type: software
+    description: The Xen Dummy Suite
+  
+- schema: Suite
+  name: perfmon suite
+  data:
+    id: 5
+    name: CTCS
+    type: software
+    description: The CTCS Dummy Suite
+  
+- schema: Suite
+  name: perfmon suite
+  data:
     id: 7
     name: perfmon
     type: software
     description: The Perfmon Dummy Suite
   
 # ---------- Report ----------
+
+- schema: Report
+  name: dummy 0
+  data:
+    id: 20
+    suite_id: 5
+    suite_version: 3.12
+    successgrade: PASS
+    tap: |
+      1..2
+      ok 1 metainformation
+      # Artemis-section: Metainfo
+      # Artemis-Suite-Name: Host-Overview
+      # Artemis-Suite-version: 0.010003
+      # Artemis-machine-name: athene
+      # Artemis-machine-description: PC-Ware
+      # Artemis-cpuinfo: 1x Family: 15, Model: 75, Stepping: 2
+      # Artemis-ram: 3967 MB
+      # Artemis-uptime: 0 hrs
+      # Artemis-reportgroup-testrun: 6567
+      ok 1 host metadata
+      1..1
+      # Artemis-section: XEN-Metainfo
+      # Artemis-xen-version: 3.4.2-rc1-pre
+      # Artemis-xen-changeset: 19754:7422afed66ee
+      # Artemis-xen-base-os-description: SUSE Linux Enterprise Server 10 SP2 (i586)
+      # Artemis-xen-dom0-kernel: 2.6.18.8-xen i686
+      ok 1 xen metadata
+      1..1
+      # Artemis-section: guest_1_suse_sles10_sp3_rc2_32b_smp_qcow
+      # Artemis-xen-guest-description: 001-lmbench
+      # Artemis-xen-guest-start: 2009-09-10 11:00:16 CEST
+      # Artemis-xen-guest-flags: acpi=1; apic=1; hap=1; hpet=0; memory=1024; pae=1; shadow_memory=10; timer_mode=2; vcpus=2
+      ok 1 - Guest info
+      1..1
+      # Artemis-section: guest_2_opensuse_11_1_32b_qcow
+      # Artemis-xen-guest-description: 002-ctcs
+      # Artemis-xen-guest-start: 2009-09-10 11:00:19 CEST
+      # Artemis-xen-guest-flags: acpi=1; apic=1; hap=1; hpet=0; memory=1280; pae=1; shadow_memory=12; timer_mode=2; vcpus=1
+      ok 1 - Guest info
 
 - schema: Report
   name: dummy 1
@@ -56,3 +112,76 @@
       ok 1 - foo
       ok 2 - bar
       ok 3 - baz
+
+# ----- Report sections -----
+
+- schema: ReportSection
+  name: 20-1-Metainfo
+  data:
+    id: 3051
+    report_id: 20
+    succession: 1
+    name: Metainfo
+    cpuinfo: "1x Family: 15, Model: 75, Stepping: 2"
+    ram: 3967 MB
+    uptime: 0 hrs
+
+- schema: ReportSection
+  name: 20-2-Xen-Metainfo
+  data:
+    id: 3052
+    report_id: 20
+    succession: 2
+    name: Xen-Metainfo
+    xen_changeset: 19754:7422afed66ee
+    xen_version: 3.4.2-rc1-pre
+    xen_dom0_kernel: 2.6.18.8-xen i686
+    xen_base_os_description: SUSE Linux Enterprise Server 10 SP2 (i586)
+
+- schema: ReportSection
+  name: 20-3-guest_1_suse_sles10_sp3_rc2_32b_smp_qcow
+  data:
+    id: 3053
+    report_id: 20
+    succession: 3
+    name: guest_1_suse_sles10_sp3_rc2_32b_smp_qcow
+    xen_guest_description: 001-lmbench
+    xen_guest_flags: acpi=1; apic=1; hap=1; hpet=0; memory=1024; pae=1; shadow_memory=10; timer_mode=2; vcpus=2
+    xen_guest_start: 2009-09-10 11:00:16 CEST
+
+- schema: ReportSection
+  name: 20-4-guest_2_opensuse_11_1_32b_qcow
+  data:
+    id: 3054
+    report_id: 20
+    succession: 4
+    name: guest_2_opensuse_11_1_32b_qcow
+    xen_guest_description: 002-ctcs
+    xen_guest_flags: acpi=1; apic=1; hap=1; hpet=0; memory=1280; pae=1; shadow_memory=12; timer_mode=2; vcpus=1
+    xen_guest_start: 2009-09-10 11:00:19 CEST
+
+# ----- group reports together
+
+# testrun 17: 23, 22
+
+- schema: ReportgroupTestrun
+  name: 17-23
+  data:
+    testrun_id: 17
+    report_id: 23
+    primaryreport: 1
+
+- schema: ReportgroupTestrun
+  name: 17-22
+  data:
+    testrun_id: 17
+    report_id: 22
+    primaryreport: ~
+
+- schema: ReportgroupTestrun
+  name: 17-20
+  data:
+    testrun_id: 17
+    report_id: 20
+    primaryreport: ~
+
