--- a/t/fixtures/reportsdb/report.yml
+++ b/t/fixtures/reportsdb/report.yml
@@ -35,6 +35,12 @@
     suite_id: 5
     suite_version: 3.12
     successgrade: PASS
+
+- schema: Tap
+  name: tap 10
+  data:
+    id: 10
+    report_id: 20
     tap: |
       1..2
       ok 1 metainformation
@@ -75,6 +81,12 @@
     suite_id: 7
     suite_version: 1.01
     successgrade: FAIL
+
+- schema: Tap
+  name: tap 11
+  data:
+    id: 11
+    report_id: 21
     tap: |
       1..4
       ok 1 foo
@@ -89,6 +101,12 @@
     suite_id: 7
     suite_version: 1.02
     successgrade: PASS
+
+- schema: Tap
+  name: tap 12
+  data:
+    id: 12
+    report_id: 22
     tap: |
       1..3
       ok 1 berlin
@@ -102,6 +120,12 @@
     suite_id: 7
     suite_version: 1.03
     successgrade: PASS
+
+- schema: Tap
+  name: tap 13
+  data:
+    id: 13
+    report_id: 23
     tap: |
       1..4
       ok 1 affe
