--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ pm_to_blib
 MANIFEST*
 !MANIFEST.SKIP
 Debian*
-Artemis-Reports-DPath-*
+Tapper-Reports-DPath-*
 cover_db
-t/artemis_schema_hardwaredb_test.sqlite
-t/artemis_schema_reportsdb_test.sqlite
-t/artemis_schema_testrundb_test.sqlite
+t/tapper_schema_hardwaredb_test.sqlite
+t/tapper_schema_reportsdb_test.sqlite
+t/tapper_schema_testrundb_test.sqlite
 
