--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ cover_db
 t/tapper_schema_hardwaredb_test.sqlite
 t/tapper_schema_reportsdb_test.sqlite
 t/tapper_schema_testrundb_test.sqlite
-
+t/tapper_schema_testrundb_test.sqlite-journal
