Дист::Зилла Roundhouse kick

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,4 @@
+.*
 !.gitignore
-Makefile*
-!Makefile.PL
-META.yml
-MYMETA.json
-MYMETA.yml
-blib
-build
-inc
-pm_to_blib
-MANIFEST*
-!MANIFEST.SKIP
-Debian*
 Tapper-Reports-DPath-*
-cover_db
-t/tapper_schema_hardwaredb_test.sqlite
-t/tapper_schema_reportsdb_test.sqlite
-t/tapper_schema_testrundb_test.sqlite
-t/tapper_schema_testrundb_test.sqlite-journal
+Debian_CPANTS.txt
