upgrade troublemaker deps

--- a/dist.ini
+++ b/dist.ini
@@ -6,3 +6,7 @@ copyright_holder = Advanced Micro Devices, Inc.
 [@AMD]
 dist = Tapper-Reports-DPath
 repository_at = github
+
+[Prereqs]
+; upgade troublemaker deps
+Module::Find = 0.11
