--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,8 @@ copyright_holder = Advanced Micro Devices, Inc.
 [@TAPPER]
 dist = Tapper-Reports-DPath
 repository_at = github
+disable_trailing_whitespace_tests = 1
+disable_pod_coverage_tests = 1
 
 [Prereqs]
 ; upgade troublemaker deps
