--- a/dist.ini
+++ b/dist.ini
@@ -14,3 +14,5 @@ disable_pod_coverage_tests = 1
 ; upgade troublemaker deps
 Module::Find = 0.11
 Template::Plugin::Autoformat = 0
+Tapper::Schema = 5.0.5
+TAP::DOM = 0
