--- a/dist.ini
+++ b/dist.ini
@@ -16,3 +16,7 @@ Module::Find = 0.11
 Template::Plugin::Autoformat = 0
 Tapper::Schema = 5.0.5
 TAP::DOM = 0
+
+[Encoding]
+encoding = bytes
+filename = t/tapper_schema_testrundb_test.sqlite
